--- a/webappModule/pom.xml
+++ b/webappModule/pom.xml
@@ -4,4 +4,12 @@
   <artifactId>webappModule</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+   <dependencies>
+	   <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+	</dependency>
+ 
+   </dependencies>
 </project>
